# scipion-em-facilities

./: .gitignore  CHANGELOG.md  CHANGES.txt  LEGACYsetup.py  MANIFEST.in  README.rst  encrypt.py  pyproject.toml  requirements.txt  secrets_template.cfg  setup.py
.github/workflows/: publish_and_tag.yml
emfacilities/: __init__.py  constants.py  protocols.conf
emfacilities/protocols/: __init__.py  getnifs.py  protocol_OCEM_json.py  protocol_OSCEM_json.py  protocol_OSCEM_metadata.py  protocol_data_counter.py  protocol_data_sampler.py  protocol_good_classes_extractor.py  protocol_monitor.py  protocol_monitor_2d_streamer.py  protocol_monitor_ctf.py  protocol_monitor_movie_gain.py  protocol_monitor_serialem.py  protocol_monitor_summary.py  protocol_monitor_system.py  protocol_trackUsedItems.py  protocol_volume_extractor.py  report_html.py  report_influx.py  secrets.py  summary_provider.py
emfacilities/templates/: TomoStreaming.json.template  execution.summary.template.html  facility_SPA_streaming.json.template  to_2Dclassification_noDoseWeithed.json.template
emfacilities/tests/: __init__.py  test_influx_report.py
emfacilities/tests/protocols/: test_protocol_OSCEM_json.py  test_protocol_OSCEM_metadata.py  test_protocol_data_counter.py  test_protocol_data_sampler.py  test_protocol_good_classes_extractor.py  test_protocol_volume_extractor.py  test_protocols_ctf_monitor.py  test_protocols_ctf_streaming.py  test_protocols_system_monitor.py
emfacilities/tests/workflows/: test_workflow_high_throughput.py  test_workflow_streaming.py
emfacilities/viewers/: __init__.py  viewer_good_classes_extractor.py  viewer_monitors.py
pyworkflow/: constants.py
pyworkflow/gui/project/: viewprotocols.py  viewprotocols_extra.py
pyworkflow/protocol/: protocol.py
scipion4facilities/: Readme.rst  __init__.py  constants.py
scipion4facilities/protocols/: protocol_monitor_ctf.py  protocol_monitor_summary.py  protocol_monitor_system.py  report_html.py  report_influx.py  secrets.py  summary_provider.py  transport.py
scipion4facilities/tests/protocols/: test_protocols_ctf_monitor.py  test_protocols_ctf_streaming.py  test_protocols_system_monitor.py
scipion4facilities/tests/workflows/: test_workflow.py  test_workflow_streaming.py
scipion4facilities/viewers/: __init__.py  viewer_monitors.py
