[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-facilities"
dynamic = ["version"]
dependencies = [
                "scipion-pyworkflow>=3.0.31",
                "scipion-em",
                "nvidia-ml-py3",
                "pytz",
                "paramiko",
                "influxdb",
                "joblib",
                "networkx",
                "scipion-em-xmipp"
]

authors = [
    {name = "Alberto Garcia Mena", email = "alberto.garcia@cnb.csic.es"},
    {name = "Daniel Marchan ", email = "damarchan@cnb.csic.es"},

]
description = "Plugin to use specific tools for facilities inside Scipion"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["scipion electron-microscopy cryo-em structural-biology image-processing scipion-3.0 facilities"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-smartscope"
Issues = "https://github.com/scipion-em/scipion-em-smartscope/issues"

[tool.setuptools.dynamic]
version = {attr = "emfacilities.__version__"}

[project.entry-points."pyworkflow.plugin"]
emfacilities = "emfacilities"