[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-facilities"
dynamic = ["version"]
dependencies = ["scipion-pyworkflow>=3.0.31",
                "scipion-em",
                "nvidia-ml-py3",
                "pytz",
                "paramiko",
                "influxdb",
                "joblib",
                "networkx",
                "scipion-em-xmipp",
                "pyyaml"]


description = "Plugin to use Scipion in facilities"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["scipion electron-microscopy cryo-em structural-biology image-processing scipion-3.0 Facilities Facility Streaming"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-facilities"
Issues = "https://github.com/scipion-em/scipion-em-facilities/issues"

[tool.setuptools.dynamic]
version = {attr = "emfacilities.__version__"}

[project.entry-points."pyworkflow.plugin"]
emfacilities = "emfacilities"
